# fourier-drawer

./: .gitignore  LICENSE  README.md  README.md.backup  README_legacy.md  fourier.py  legacy.py  main.py  out.json  requirements.txt  requirements_cuda.txt
cpp/: CMakeLists.txt  CMakeSettings.json  debug.cpp  lib.cpp  render.cpp  test.cu
cpp/cmake/: FindFFmpeg.cmake
cpp/include/: CudaFourierSeries.cuh  CyclicalLineStrip.h  FourierSeries.h  LineStrip.h  Lines.h  MultiBuffer.h  NpFourierSeries.h  RenderInstance.h  RenderParam.h  Shader.h  VideoEncoder.h  constant.h  core.h  profile.h
cpp/lib/: glew32s.lib
cpp/shaders/: fade.frag  solid.frag
cpp/src/: CudaFourierSeries.cu  CyclicalLineStrip.cpp  LineStrip.cpp  Lines.cpp  MultiBuffer.cpp  NpFourierSeries.cpp  RenderInstance.cpp  Shader.cpp  VideoEncoder.cpp  cudaInfo.cu
libs/: cpp_render.py  cuda_buffer.py  gif.py  path.py  render.py  render_cuda.py  shader.py  util.py
libs/cpp/: Makefile
libs/legacy/: render.py  render_cuda.py
libs/shaders/: 2d.vert
tests/: test.py
